--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-login.conf
-*.saves
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -7,8 +5,16 @@ login.conf
 *.so
 *.dylib
 
-# Test binary, build with `go test -c`
+# Test binary, built with `go test -c`
 *.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Dependency directories (remove the comment below to include it)
+vendor/
+
+# Custom stuff
+go.mod
+go.sum
+*.conf
